# Mustachify

./: .gitignore  Aptfile  Dockerfile  MANIFEST.in  Makefile  MustachifyNotebook.ipynb  README.md  __init__.py  index.html  main.py  mustachift.py  mustachify.py  mustaschift.py  pyproject.toml  requirements.txt  setup.py  tox.ini  transformed_mustache.ipynb  transformed_mustachify.ipynb
deta/: deta_actions.py  main.py
deta/.deta/: prog_info  state
mustachify/: main.py
static/: index.js  styles.css
