[tool.poetry]
name = "mustachify"
version = "0.1.0"
description = ""
authors = ["DonQueso89 <kg.v.ekeren@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"
aiofiles = "^0.6.0"
face-recognition = "^1.3.0"
cmake = "^3.18.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
isort = "^5.7.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
